# FOREX---Z

./: README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
analytics/: __init__.py  __main__.py
analytics/scripts/: backtest.py  decomposition.py  markov.py  metrics.py  model.py  prices.py  regimes.py  report.py
dashboard/: __init__.py  app.py  data.py  plots.py  theme.py
database/: forex_data.db  init_db.py  migrate_to_sqlite.py
economic_data/scripts/: carry.py  country_indicator.py  pair_indicator_score.py  pair_total_score.py
maths_stats/: z_score_calculation.py
sentiment/scripts/: cot.py
tests/: conftest.py
tests/fixtures_data/: cftc_cot.txt  te_gdp_growth.html
tests/http/: test_cot_fetch.py  test_country_fetch.py  test_prices_fetch.py
tests/integration/: test_backtest.py  test_carry.py  test_decomposition.py  test_end_to_end.py  test_gestion_db.py  test_markov.py  test_model.py  test_pair_scores.py  test_regimes.py  test_z_scores.py
tests/unit/: test_clean_value.py  test_cot_math.py  test_dashboard_data.py  test_dashboard_plots.py  test_data_changed.py  test_indicator_coefficient.py  test_indicator_score.py  test_markov.py  test_metrics.py  test_model.py  test_report.py
utils/: gestion_db.py  logger.py  parametres.py  ui.py
