[project]
name = "forex-z"
version = "0.2.0"
description = "FOREX-Z — pipeline d'analyse macro-économique (éducatif)."
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests nécessitant une DB SQLite temporaire",
    "http: tests mockant des appels HTTP externes",
]

[tool.coverage.run]
branch = true
source = [
    "economic_data",
    "sentiment",
    "maths_stats",
    "utils",
    "analytics",
]
omit = [
    "*/__init__.py",
    "database/migrate_to_sqlite.py",
    "database/init_db.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    "database/forex_data.db",
    "database/migrate_to_sqlite.py",
    "database/init_db.py",
    "logs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — on laisse ruff-format gérer
    "B008",  # function call in default argument — non pertinent ici
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # pas d'assert en prod mais OK en tests
"dashboard/app.py" = ["E402"]  # sys.path.insert avant imports — nécessaire pour `streamlit run`

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "database/migrate_to_sqlite.py",
    "database/init_db.py",
    "tests/",
]
